// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`should call the onClick handler > navigate-with-onClick 1`] = `
<a
  class="MuiButtonBase-root MuiListItemButton-root MuiListItemButton-gutters MuiListItemButton-root MuiListItemButton-gutters css-16ac5r2-MuiButtonBase-root-MuiListItemButton-root"
  data-testid="navigate-with-onClick"
  href="/test"
  tabindex="0"
>
  Test
  <span
    class="MuiTouchRipple-root css-8je8zh-MuiTouchRipple-root"
  />
</a>
`;

exports[`should navigate to href when clicked > navigate-with-href 1`] = `
<a
  class="MuiButtonBase-root MuiListItemButton-root MuiListItemButton-gutters MuiListItemButton-root MuiListItemButton-gutters css-16ac5r2-MuiButtonBase-root-MuiListItemButton-root"
  data-testid="navigate-with-href"
  href="/test-path"
  tabindex="0"
>
  Test
  <span
    class="MuiTouchRipple-root css-8je8zh-MuiTouchRipple-root"
  />
</a>
`;

exports[`should render a disabled link > disabled-link 1`] = `
<a
  aria-disabled="true"
  class="MuiButtonBase-root MuiListItemButton-root MuiListItemButton-gutters Mui-disabled Mui-disabled MuiListItemButton-root MuiListItemButton-gutters Mui-disabled css-16ac5r2-MuiButtonBase-root-MuiListItemButton-root"
  data-testid="disabled-link"
  href="/test"
  tabindex="-1"
>
  Test
</a>
`;

exports[`should render a link 1`] = `
<DocumentFragment>
  <a
    class="MuiButtonBase-root MuiListItemButton-root MuiListItemButton-gutters MuiListItemButton-root MuiListItemButton-gutters css-16ac5r2-MuiButtonBase-root-MuiListItemButton-root"
    href="/test"
    tabindex="0"
  >
    Test
    <span
      class="MuiTouchRipple-root css-8je8zh-MuiTouchRipple-root"
    />
  </a>
</DocumentFragment>
`;
